View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025591 | Open CASCADE | OCCT:Modeling Algorithms | public | 2014-12-11 14:25 | 2015-05-14 15:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025591: Command mkshell produces wrong shell | ||||
Description | Command mkshell produces wrong shell. The shell sh contains edges sh_2, sh_3, that have 3-D curves. For e.g (csh_2): *********** Dump of csh_2 ************* Trimmed curve Parameters : 0 6.28318530717959 Basis curve : BSplineCurve Degree 1, 2 Poles, 2 Knots Poles : 1 : 6.12323399573677e-015, -1.57772181044202e-030, -100 2 : 6.12323399573677e-015, -1.57772181044202e-030, -100 Knots : 1 : 0 2 2 : 6.28318530717959 2 The edges sh_2, sh_3 should be degenerated. | ||||
Steps To Reproduce | # Use the following DRAW commands to reproduce the problem: sphere surf 100 mkshell sh surf 1 explode sh e mkcurve csh_2 sh_2 dump csh_2 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5(010) bug25591 | ||||
|
I agree that 3d bspline curve consisting of two poles that are coincided must not be created. Such edge must be degenerated. |
|
Branch CR25591 has been created by azv. SHA-1: c4209be18ab113b9cf9d7a841d3fec8578560c65 Detailed log of new commits: Author: azv Date: Tue Dec 16 15:48:42 2014 +0300 0025591: Command mkshell produces wrong shell The functionality to decide, whether the edge is degenerated, was shared via BRepLib. The verification of producing degenerated edges was added to BRepLib_MakeShell. |
|
Branch CR25591 is ready for review |
|
Please move the method IsDegenerated back to MakeFace and make it public static class method. |
|
Branch CR25591 has been updated forcibly by azv. SHA-1: 590fe7b96ebcbe51899854d521d7c8f215a34532 |
|
Please, review updated branch CR25591 |
|
OK. Please test. |
|
Dear BugMaster, Branch CR25591 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 590fe7b96ebcbe51899854d521d7c8f215a34532 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests.nnov.opencascade.com/CR25591-master-occt/Debian60-64/bugs/modalg_5/bug25591.html http://occt-tests.nnov.opencascade.com/CR25591-master-occt/Windows-32-VC10/bugs/modalg_5/bug25591.html bugs modalg_5(010) bug25591: OK Testing on Linux: occt component : Total MEMORY difference: 367121684 / 367914368 Total CPU difference: 49935.789999999884 / 51486.65000000016 products component : Total MEMORY difference: 112312036 / 112529744 Total CPU difference: 16234.62999999999 / 16876.739999999983 Testing on Windows: occt component : Total MEMORY difference: 277868488 / 277270364 Total CPU difference: 44731.453125 / 37471.9842007 products component : Total MEMORY difference: 72405396 / 71382268 Total CPU difference: 13259.609375 / 10342.656534399997 There are no differences in images found by testdiff. |
|
Branch CR25591 has been updated by mkv. SHA-1: 1714607ad6378ae3b543b01c8633d6653de83b9e Detailed log of new commits: Author: mkv Date: Fri Dec 19 12:08:45 2014 +0300 Test case for issue CR25591 |
|
Dear azv, could you please review test case bugs/modalg_5(010)/bug25591 |
|
Dear mkv, Test case is OK. |
|
Branch CR25591 is TESTED. |
|
Branch CR25591 has been deleted by inv. SHA-1: 1714607ad6378ae3b543b01c8633d6653de83b9e |
occt: master b7d23870 2014-12-25 13:42:49 Committer: bugmaster Details Diff |
0025591: Command mkshell produces wrong shell The functionality to decide, whether the edge is degenerated, was shared via BRepLib_MakeFace. The verification of producing degenerated edges was added to BRepLib_MakeShell. Test case for issue CR25591 |
Affected Issues 0025591 |
|
mod - src/BRepLib/BRepLib_MakeFace.cdl | Diff File | ||
mod - src/BRepLib/BRepLib_MakeFace.cxx | Diff File | ||
mod - src/BRepLib/BRepLib_MakeShell.cxx | Diff File | ||
add - tests/bugs/modalg_5/bug25591 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-11 14:25 |
|
New Issue | |
2014-12-11 14:25 |
|
Assigned To | => msv |
2014-12-11 14:25 |
|
Status | new => assigned |
2014-12-11 16:59 | msv | Assigned To | msv => azv |
2014-12-11 17:01 | msv | Note Added: 0035340 | |
2014-12-11 17:02 | msv | Note Edited: 0035340 | |
2014-12-16 15:53 | git | Note Added: 0035418 | |
2014-12-16 15:54 | azv | Note Added: 0035419 | |
2014-12-16 15:54 | azv | Assigned To | azv => msv |
2014-12-16 15:54 | azv | Status | assigned => resolved |
2014-12-17 10:23 | msv | Note Added: 0035432 | |
2014-12-17 10:23 | msv | Assigned To | msv => azv |
2014-12-17 10:23 | msv | Status | resolved => assigned |
2014-12-17 11:16 | git | Note Added: 0035440 | |
2014-12-17 11:16 | azv | Note Added: 0035441 | |
2014-12-17 11:16 | azv | Assigned To | azv => msv |
2014-12-17 11:16 | azv | Status | assigned => resolved |
2014-12-18 18:24 | msv | Note Added: 0035490 | |
2014-12-18 18:24 | msv | Assigned To | msv => bugmaster |
2014-12-18 18:24 | msv | Status | resolved => reviewed |
2014-12-18 19:31 |
|
Assigned To | bugmaster => mkv |
2014-12-19 12:06 |
|
Note Added: 0035503 | |
2014-12-19 12:07 |
|
Test case number | => bugs modalg_5(010) bug25591 |
2014-12-19 12:09 | git | Note Added: 0035506 | |
2014-12-19 12:10 |
|
Note Added: 0035507 | |
2014-12-19 12:10 |
|
Assigned To | mkv => azv |
2014-12-19 12:10 |
|
Status | reviewed => feedback |
2014-12-19 12:20 | azv | Note Added: 0035511 | |
2014-12-19 12:20 | azv | Assigned To | azv => mkv |
2014-12-19 12:20 | azv | Status | feedback => reviewed |
2014-12-19 14:40 |
|
Note Added: 0035515 | |
2014-12-19 14:40 |
|
Assigned To | mkv => bugmaster |
2014-12-19 14:40 |
|
Status | reviewed => tested |
2014-12-26 13:33 | bugmaster | Changeset attached | => occt master b7d23870 |
2014-12-26 13:33 | bugmaster | Status | tested => verified |
2014-12-26 13:33 | bugmaster | Resolution | open => fixed |
2015-01-19 16:23 | bugmaster | Target Version | 7.0.0 => 6.9.0 |
2015-01-26 12:34 | git | Note Added: 0036562 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |